<resources>
    <string name="app_name">Mageli</string>
    <string name="error_conexion_internet">No tienes conexión a internet, comprueba tu conexión e inténtalo de nuevo</string>
    <string name="error_conexion_google">No se ha podido conectar con Google intenta de nuevo</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="contraseniabiz">Repetir contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registro">Registrarse</string>
    <string name="otambien">Ó</string>
    <string name="no_tines_cuenta">¿Aun no tienes una cuenta?</string>
    <string name="registrate">Registrate ahora</string>
    <string name="olvide_contrasenia">¿Olvidó su contraseña?</string>
    <string name="restablecer_contrasia">Restablecer</string>
    <string name="restablecer_contrasia_mensaje">Se ha envio un link a su correo para restablecer la contraseña</string>
    <string name="verificar_sesion">Iniciando sesión...</string>
    <string name="error_login_firebase">No se ha podido iniciar sesión en Mageli</string>
    <string name="error_cerrar_sesion">No se ha podido cerrar sesión en Mageli</string>
    <string name="cerrar_sesion">Sesion cerrado en Mageli</string>
    <string name="error_correo">Ingrese su correo electrónico</string>
    <string name="error_contrasenia">Ingrese su contraseña</string>
    <string name="error_contraseniabiz">Reingrese la contraseña</string>
    <string name="error_correo_no_valido">Ingrese un correo electrónico válido</string>
    <string name="error_contrasenia_no_valido">Ingrese una contraseña con más 6 caracteres</string>
    <string name="error_contrasenia_no_igual">Las contraseñas no son iguales</string>
    <string name="error_registro">Lo sentimos no se ha podido registrar en </string>
    <string name="error_usuario_existe">Ya existe un usuario con este correo</string>
    <string name="error_ingreso">Correo y/o contraseña incorrectas</string>
    <string name="ya_tines_cuenta">¿Ya tienes una cuenta?</string>
    <string name="ir_login">Inicia sesión ahora</string>
    <string name="registro_exito">Se ha Registrado exitósamente en Mageli</string>
    <string name="registro_error">Lo sentimos no se podido registrar en Mageli</string>
    <string name="verificacion_correo">Se ha envio un link a su correo para la verificacón de tu correo electrónico</string>
    <string name="no_verificado_correo">Necesitas verificar tu correo electrónico para iniciar sesión Mageli</string>
    <string name="menu">Mageli</string>
    <string name="abrir_nav">Abrir Menu</string>
    <string name="cerar_nav">Cerrar Menu</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="correo_usuario">correo@mageli.com</string>
    <string name="descripcion_nav">Cabezera</string>
    <string name="notificacion">Notificaciones</string>
    <string name="inicio">Inicio</string>
    <string name="configuracion">Configuración</string>
    <string name="privacidad">Privacidad</string>
    <string name="web">Web de App Mageli</string>
    <string name="salir_preciona_una_ves_mas">Presione dos veces para salir</string>
    <string name="perfil">Mi Perfil</string>
    <string name="citas">Citas</string>
    <string name="consulta">Consultas</string>
    <string name="chats">Mensajes</string>
    <string name="micuenta">Mi Cuenta</string>
    <string name="cuenta">Datos de la Cuenta</string>
    <string name="salir">Salir</string>
    <string name="mensaje_salir">Cerrar sesión en Mageli</string>
    <string name="car_user">Usuarios</string>
    <string name="car_user_activos">+10 Usuarios activos</string>
    <string name="car_citas">+100 Citas programadas</string>
    <string name="car_consultas">+800 Consultas atendidas</string>
    <string name="car_ubicacion">Avenida Alfonso Ugarte N° 825, Cercado de Lima 15001</string>
    <string name="car_horario">Hora de atención   08:00 A.M  a  05:00 P.M</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="numero_documento">Número de identidad</string>
    <string name="telefono">Numero de Célular</string>
    <string name="numero_hc">N° historial clínico</string>
    <string name="direccion">Dirección</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="btn_perfil">Guardar cambios</string>
    <string name="cancelar_leer_datos_perfil">Ud. canceló la lectura de su perfil</string>
    <string name="actualiza_perfil">Por favor actulize tus datos para continuar usando Mageli</string>
    <string name="error_nombre">Ingrese un nombre válido</string>
    <string name="error_apellidos">Ingrese sus apellidos</string>
    <string name="error_numero_documento">Ingrese un número de identidad</string>
    <string name="error_telefono">Ingrese un numero de célular válido</string>
    <string name="error_numero_hc">Ingrese un N° historial clínico válido</string>
    <string name="error_direccion">Ingrese su dirección</string>
    <string name="error_fecha_nacimiento">Ingrese un fecha de nacimiento válido</string>
    <string name="error_tipo_doc">Seleccione un tipo de documento</string>
    <string name="anonimo">Anónimo</string>
    <string name="pediatra">Pediatra</string>
    <string name="numero_hc_titulo">Número de Historial Clínico</string>
    <string name="mensaje_num_hc">¿Sé mi Número de mi Historia Clinica?</string>
    <string name="perfil_ok">Datos actualizados corectamente</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="carga_perfil">Cargando tu perfil espere...</string>
    <string name="asunto">Asunto</string>
    <string name="descripcion">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="n_peronsas">N° de personas</string>
    <string name="elejir_esp">Elegir especialista</string>
    <string name="btn_cita">Guardar cita</string>
    <string name="error_asunto_cita">Ingrese un asunto válido</string>
    <string name="error_descripcion_cita">Ingrese una descripción válida</string>
    <string name="error_fecha_cita">Ingrese una fecha válida</string>
    <string name="error_hora_cita">Ingrese una hora válido</string>
    <string name="error_numero_persona_cita">Ingrese un número válido</string>
    <string name="error_numero_persona_permitida">Puedes hacer una cita máximo para dos personas</string>
    <string name="popap_titulo_pediatras">Seleccione una especialista</string>
    <string name="cargando_pediatras">Cargando especialistas espere...</string>
    <string name="cita_registrado_ok">Tu cita fue agregado con exíto</string>
    <string name="cita_modificado_ok">Tu cita fue modificado con exíto</string>
    <string name="atendido">Atendido</string>
    <string name="cancelado">Cancelado</string>
    <string name="pendiente">Pendiente</string>
    <string name="postergado">Postergado</string>
    <string name="cargando_citas">Cargando tus citas espere...</string>
    <string name="con">Con:</string>
    <string name="modificar">Modificar o posponer</string>
    <string name="eliminar">Eliminar</string>
    <string name="no_editar_cita_atendido">No se puede modificar o posponer  la cita, ya fue atendido</string>
    <string name="no_editar_cita_cancelado_editar">No se puede modificar o posponer  la cita, ya fue cancelado</string>
    <string name="no_editar_cita_cancelado">No se puede cancelar la cita, ya fue cancelado</string>
    <string name="no_editar_cita_no_atendido">No se puede modificar o posponer la cita, ya fue marcado como no atendido</string>
    <string name="no_cancelar_cita_atendido">No se puede cancelar la cita, ya fue marcado como atendido</string>
    <string name="no_cancelar_cita_no_atendido">No se puede cancelar la cita, ya fue marcado como no atendido</string>
    <string name="desea_cancelar_cita">¿Esta seguro de cancelar la cita?</string>
    <string name="eliminar_cita">¿Esta seguro de eliminar la cita?</string>
    <string name="cita_cancelado">Tu cita fue cancelado</string>
    <string name="asunto_consulta">Asunto de la consulta</string>
    <string name="descripcion_consulta">Describe tu consulta</string>
    <string name="consulta_privada">Hacer una consulta privada</string>
    <string name="btn_consulta">Enviar consulta</string>
    <string name="consulta_registrado_ok">Consulta publicado correctamente</string>
    <string name="cargando_cosultas">Cargando tus consultas espere...</string>
    <string name="eliminar_consulta">¿Desea eliminar la consulta?</string>
    <string name="editar_consulta">Modificar</string>
    <string name="publicado">Publicado:</string>
    <string name="si_respuesta">1 Respuesta</string>
    <string name="no_respuesta">Sin Respuesta</string>
    <string name="no_editar_consulta">No se puede modificar la consulta ya fue respondido</string>
    <string name="consulta_actualizado_ok">Consulta actualizado correctamente</string>
    <string name="mis_respuestas">Mis Respuestas</string>
    <string name="cerrar">Cerrar</string>
    <string name="consulta_sin_respuesta">La consulta aun no ha sido respondido</string>
    <string name="a">A:</string>
    <string name="no_consulta">No tienes nuevas Consultas</string>
    <string name="personas">personas</string>
    <string name="no_citas">No tienes nuevas Citas</string>
    <string name="para">Para:</string>
    <string name="de">De:</string>
    <string name="marcar_como_no_atendido">¿Estas seguro de marcar la cita como no Atendido?</string>
    <string name="marcar_como_atendido">¿Estas seguro de marcar la cita como Atendido?</string>
    <string name="marcar_no_atendido">Marca como no atendido</string>
    <string name="marcar_atendido">Marca como atendido</string>
    <string name="no_atendido">No Atendido</string>
    <string name="marcar_atendido_ya_marcado_antendido">No se puede marcar la cita como atendido ya fue marcado anteriormente</string>
    <string name="marcar_no_atendido_ya_antendido">No se puede marcar la cita como no atendido ya fue atendido</string>
    <string name="marcar_atendido_marcado_no_antendido">No se puede marcar la cita como atendido ya fue marcado no atendido</string>
    <string name="marcar_no_atendido_marcado_no_antendido">No se puede marcar la cita como no atendido ya fue marcado anteriormente</string>
    <string name="marcar_no_atendido_ya_cancelado">No se puede marcar la cita como no atendido ya fue cancelada</string>
    <string name="marcar_atendido_ya_cancelado">No se puede marcar la cita como atendido ya fue cancelada</string>
    <string name="respondido">Respondido</string>
    <string name="no_respondido">No Respondido</string>
    <string name="responder">Responder consulta</string>
    <string name="consultado">Consultado:</string>
    <string name="paciente">Paciente</string>
    <string name="escribe_respuesta">Escribe tu respuesta aqui...</string>
    <string name="respuesta_ok">Respondido correctamente</string>
    <string name="consulta_ya_respondido">Ya respondiste la consulta anteriormente</string>
    <string name="respuesta_no_valida">La respuesta debe tener por lo menos 15 carácteres para se valida</string>
    <string name="no_notificacones">No tienes nuevas Notificaciones</string>
    <string name="error_enviar_notificacion">Error al enviar notificación</string>
    <string name="notificacion_cita_enviada">La notificación de cita fue enviada</string>
    <string name="notificacion_cita_no_enviada">No se pudo enviar la notificación</string>
    <string name="notificacion_cita_cancelacion">Se envio una notificación por cancelar la Cita</string>
</resources>