<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_perfil"
            android:icon="@drawable/pediatra"
            android:title="@string/perfil" />
        <item
            android:id="@+id/item_citas"
            android:icon="@drawable/citas"
            android:title="@string/citas" />
        <item
            android:id="@+id/item_consulta"
            android:icon="@drawable/consultas"
            android:title="@string/consulta" />
        <item
            android:id="@+id/item_chat"
            android:icon="@drawable/chat"
            android:title="@string/chats" />
    </group>
    <item android:title="@string/cuenta">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_cuenta"
                    android:icon="@drawable/cuenta"
                    android:title="@string/micuenta" />
                <item
                    android:id="@+id/item_salir"
                    android:icon="@drawable/salir"
                    android:title="@string/salir" />
            </group>
        </menu>
    </item>
</menu>


