<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frame.EditarPerfilFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/pediatra"
                    android:hint="@string/nombre"
                    android:drawablePadding="5dp"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/pacientes"
                    android:hint="@string/apellidos"
                    android:drawablePadding="5dp"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/card"
                    android:hint="@string/numero_documento"
                    android:inputType="number"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Se mi Numero de Historia Clinico"
                android:textColor="@color/secondario_text"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/pading"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/card"
                    android:hint="@string/numero_hc"
                    android:inputType="number"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/casa"
                    android:hint="@string/direccion"
                    android:inputType="textPostalAddress"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/telefono"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"
                    android:layout_marginEnd="@dimen/pading"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Femenino"/>
            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/calendario"
                    android:hint="@string/fecha_nacimiento"
                    android:inputType="date"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:background="@color/rosa"
                android:textColor="@color/icono"
                android:id="@+id/btn_perfil"
                android:layout_marginTop="@dimen/padingTopBotom"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>